# luffy

./: .gitignore  Cargo.toml  LICENSE  README  README.md  README.md]
.cargo/: config.toml
.github/workflows/: release.yml
config/: dev.toml  rumqttd.toml
debian/: control  postinst
docker/: Dockerfile  docker-compose.yml
luffy-common/: Cargo.toml  cargo.toml
luffy-common/src/: config.rs  lib.rs  mqtt.rs  util.rs
luffy-common/src/aws/: client.rs  mod.rs
luffy-common/src/iot/: local.rs  remote.rs
luffy-common/src/ota/: deb.rs  mod.rs  version.rs
luffy-deploy/: README.md
luffy-deploy/config/development/: base.toml  gateway.toml  launcher.toml  media.toml
luffy-deploy/docker/: build-deb.Dockerfile
luffy-deploy/scripts/: build-deb.sh  luffy-gateway.service  luffy-launcher.service  luffy-media.service
luffy-gateway/: Cargo.toml  README.md
luffy-gateway/debian/: postinst  postrm
luffy-gateway/src/: aws_client.rs  broker.rs  config.rs  lib.rs  main.rs  mav_server.rs  vehicle.rs
luffy-gateway/src/iot/: local.rs  remote.rs  server.rs
luffy-gateway/src/ota/: version.rs
luffy-launcher/: Cargo.toml  README.md
luffy-launcher/debian/: install  postinst  postrm
luffy-launcher/src/: config.rs  lib.rs  main.rs
luffy-launcher/src/launcher/: service_manager.rs
luffy-launcher/src/monitor/: mod.rs  mqtt.rs  service.rs  vehicle.rs
luffy-launcher/src/ota/: deb.rs  mod.rs  tests.rs  update.rs  version.rs
luffy-launcher/src/web/: index_page.rs  mod.rs  server.rs
luffy-launcher/static/css/: main.css
luffy-launcher/templates/: index.html
luffy-media/: Cargo.toml  README.md
luffy-media/debian/: postinst  postrm
luffy-media/src/: config.rs  lib.rs  main.rs  mqtt.rs  ws.rs
luffy-media/src/media/: camera.rs  mod.rs  service.rs  tests.rs
scripts/: luffy.service
src/: aws_client.rs  broker.rs  config.rs  iot_server.rs  lib.rs  main.rs  mav_server.rs  util.rs  vehicle.rs  web_server.rs
src/iot/: local.rs  mod.rs  remote.rs  server.rs  telemetry.rs
src/ota/: mod.rs  tests.rs  update.rs  version.rs
src/web/: index_page.rs  server.rs
static/css/: main.css
templates/: index.html
