[workspace]
members = [
    "luffy-launcher",
    "luffy-gateway",
    "luffy-media",
    "luffy-common",
]
resolver = "2"

[workspace.package]
version = "0.3.1"
authors = ["Liang Huang <liang.huang@marinethinking.com>"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
config = "0.14"
rumqttc = {version = "0.24", features = ["use-rustls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.20"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4"] }