[package]
name = "luffy-common"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-lambda.workspace = true
aws-sdk-s3.workspace = true

config.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
rumqttc.workspace = true
glob.workspace = true
strum.workspace = true
strum_macros.workspace = true
 
derivative = "2.2"
dirs = "5.0"
futures = "0.3"
network-interface = "2.0"
uuid = { version = "1.11", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
rustls-pemfile = "2.2"
semver = "1.0"
