[package]
name = "luffy-gateway"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
luffy-common = { path = "../luffy-common" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rumqttc.workspace = true
askama = "0.12"
aws-config = {version = "1.5", features = ["rustls"]}
aws-sdk-dynamodb = {version = "1.54", features = ["rustls"]}
aws-sdk-lambda = {version = "1.59", features = ["rustls"]}
aws-sdk-s3 = {version = "1.63.0", features = ["rustls"]}
axum = "0.7"
config = "0.14"
dirs = "5.0"
mavlink = "0.13"
num-traits = "0.2"
once_cell = "1.20"
rumqttd = {version = "0.19", features = ["use-rustls"]}
rustls-pemfile = "2.2"
tower-http = { version = "0.6", features = ["full"] }
uuid = { version = "1.11", features = ["v4"] }
self_update = "0.41"
semver = "1.0"
reqwest = { version = "0.12", features = ["stream","rustls-tls"], default-features = false }
chrono = "0.4"
indicatif = "0.17"
futures-util = "0.3"
network-interface = "2.0"


[dev-dependencies]
tempfile = "3.14"

