[package]
name = "luffy-gateway"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
luffy-common = { path = "../luffy-common" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
config.workspace = true
rumqttc.workspace = true
reqwest.workspace = true
semver.workspace = true
futures.workspace = true

askama = "0.12"
aws-config = {version = "1.5", features = ["rustls"]}
aws-sdk-dynamodb = {version = "1.54", features = ["rustls"]}
aws-sdk-lambda = {version = "1.59", features = ["rustls"]}
aws-sdk-s3 = {version = "1.63.0", features = ["rustls"]}
 

dirs = "5.0"
mavlink = "0.13"
num-traits = "0.2"
 
rumqttd = {version = "0.19", features = ["use-rustls"]}
rustls-pemfile = "2.2"
tower-http = { version = "0.6", features = ["full"] }
uuid = { version = "1.11", features = ["v4"] }
self_update = "0.41"
chrono = "0.4"
indicatif = "0.17"

network-interface = "2.0"


[dev-dependencies]
tempfile = "3.14"


[package.metadata.deb]
maintainer = "Marine Thinking <liang.huang@marinethinking.com>"
copyright = "2024, Marine Thinking <liang.huang@marinethinking.com>"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/luffy-gateway", "usr/bin/", "755"],
    ["../luffy-deploy/config/development/gateway.toml", "etc/luffy/", "644"],
    ["../luffy-deploy/config/development/base.toml",  "usr/share/luffy-gateway/base.toml", "644"],
    ["../luffy-deploy/scripts/luffy-gateway.service", "lib/systemd/system/", "644"],
]
conf-files = [
    "/etc/luffy/gateway.toml"
]
systemd-units = { unit-name = "luffy-gateway", enable = true, start = true }
maintainer-scripts = "debian/"
