[package]
name = "luffy-launcher"
version.workspace = true
authors.workspace = true
edition.workspace = true


[dependencies]
luffy-common = { path = "../luffy-common" }

anyhow.workspace = true
config.workspace = true
glob.workspace = true
once_cell.workspace = true
rumqttc.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

axum = "0.7"
askama = "0.12"
chrono = "0.4"
dirs = "5.0"
indicatif = "0.17"
num-traits = "0.2"
reqwest = { version = "0.12", features = ["stream","rustls-tls","json"], default-features = false }
tower-http = { version = "0.6", features = ["full"] }
futures = "0.3"


[dev-dependencies]
tempfile = "3.14"

[package.metadata.deb]
maintainer = "Marine Thinking <liang.huang@marinethinking.com>"
copyright = "2024, Marine Thinking <liang.huang@marinethinking.com>"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/luffy-launcher", "usr/bin/", "755"],
    ["../luffy-deploy/config/development/launcher.toml", "etc/luffy/", "644"],
    ["../luffy-deploy/config/development/base.toml", "usr/share/luffy-launcher/base.toml", "644"],
    ["../luffy-deploy/scripts/luffy-launcher.service", "lib/systemd/system/", "644"],
    ["static/**/*", "usr/share/luffy-launcher/static/", "644"],
]
conf-files = [
    "/etc/luffy/launcher.toml"
]
systemd-units = { unit-name = "luffy-launcher", enable = true, start = true }
maintainer-scripts = "debian/"
