[package]
name = "luffy-media"
version.workspace = true
edition.workspace = true

[dependencies]
luffy-common = {path = "../luffy-common"}

anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
futures.workspace = true
 
rumqttc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
uuid.workspace = true

retina= "0.4"
webrtc= "0.12"
url = "2.5"